[gd_scene load_steps=10 format=3 uid="uid://c8luj67t7wp0f"]

[ext_resource type="Script" uid="uid://uy740ptjuert" path="res://scenes/shop.gd" id="1_1l46r"]
[ext_resource type="Texture2D" uid="uid://c5mkfdc6ggd88" path="res://art/normal/shop_background.png" id="2_032fp"]
[ext_resource type="PackedScene" uid="uid://crfhe2eauacaw" path="res://scenes/item.tscn" id="3_2fc2m"]
[ext_resource type="Texture2D" uid="uid://ccvkchmlmsmhs" path="res://art/normal/shop_arrow.png" id="3_ajxib"]
[ext_resource type="AudioStream" uid="uid://dod0au4dohjpx" path="res://audio/refresh.mp3" id="4_8r1wq"]
[ext_resource type="Texture2D" uid="uid://dea8ilkskvfcg" path="res://art/normal/refresh.png" id="4_032fp"]
[ext_resource type="FontFile" uid="uid://knux3gtftdqa" path="res://small_pixel.ttf" id="5_2fc2m"]
[ext_resource type="PackedScene" uid="uid://c8jbhpmgrp2yw" path="res://scenes/detector.tscn" id="8_y6sft"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ajxib"]
size = Vector2(106, 64)

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 96.0
offset_right = 96.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_1l46r")

[node name="ShopBackground" type="Sprite2D" parent="."]
position = Vector2(-48, 0)
texture = ExtResource("2_032fp")

[node name="ShopArrow" type="Sprite2D" parent="."]
position = Vector2(-101, 0)
texture = ExtResource("3_ajxib")

[node name="ItemPool" type="Control" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -95.0
offset_top = -22.0
offset_bottom = 25.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 1

[node name="Item1" parent="ItemPool" instance=ExtResource("3_2fc2m")]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
offset_left = 3.0
offset_top = -12.5
offset_right = 31.0
offset_bottom = 15.5
grow_horizontal = 1

[node name="Item2" parent="ItemPool" instance=ExtResource("3_2fc2m")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.5
offset_top = -12.5
offset_right = 15.5
offset_bottom = 15.5

[node name="Item3" parent="ItemPool" instance=ExtResource("3_2fc2m")]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -12.5
offset_right = -2.0
offset_bottom = 15.5
grow_horizontal = 0

[node name="Refresh" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -94.0
offset_top = -29.0
offset_right = -84.0
offset_bottom = -19.0
grow_horizontal = 0
mouse_filter = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Refresh"]
stream = ExtResource("4_8r1wq")

[node name="Sprite2D" type="Sprite2D" parent="Refresh"]
position = Vector2(5, 5)
texture = ExtResource("4_032fp")

[node name="Label" type="Label" parent="Refresh"]
modulate = Color(1, 0.933333, 0, 1)
layout_mode = 0
offset_left = 11.0
offset_top = 1.0
offset_right = 17.0
offset_bottom = 9.0
theme_override_fonts/font = ExtResource("5_2fc2m")
theme_override_font_sizes/font_size = 8
text = "3"

[node name="MouseDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseDetector"]
position = Vector2(-53, 0)
shape = SubResource("RectangleShape2D_ajxib")

[node name="Detector" parent="." instance=ExtResource("8_y6sft")]
position = Vector2(-53, 0)
SIZE = Vector2(106, 64)

[connection signal="pressed" from="Refresh" to="." method="_refresh"]
[connection signal="mouse_entered" from="Detector" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Detector" to="." method="_on_mouse_exited"]
